[gd_scene load_steps=2 format=3 uid="uid://caex2v75b82lu"]

[ext_resource type="Script" path="res://ui.gd" id="1_4kyg6"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_4kyg6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.54

[node name="red" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/red"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="red_label" type="Label" parent="VBoxContainer/HBoxContainer/red/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "RED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="red_count" type="Label" parent="VBoxContainer/HBoxContainer/red/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="green" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/green"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="green_label" type="Label" parent="VBoxContainer/HBoxContainer/green/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0.778528, 0.0286701, 1)
text = "GREEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="green_count" type="Label" parent="VBoxContainer/HBoxContainer/green/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="blue" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/blue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="blue_label" type="Label" parent="VBoxContainer/HBoxContainer/blue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.112322, 0.247032, 1, 1)
text = "BLUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="blue_count" type="Label" parent="VBoxContainer/HBoxContainer/blue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Container" type="Container" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.17

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Place RED factory: Q
Place GREEN factory: W
Palce Blue facotry: E"
